# mssim

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml  run.sh  settings.json
results/: result.jsonl
script/: run_simple.sh
src/mssim/: __init__.py  executor.py  output.py
src/mssim/circuits/: library.py  model.py  to_qibo.py  to_qiskit.py  to_quimb.py
src/mssim/engines/: abstract.py  converters.py  library.py  mpstab.py  mpstab_engine.py  qiskit.py  quimb.py  quimb_engine.py  registry.py  statevector_engine.py
tests/: test_basic.py
