[tool.poetry]
name = "mssim"
version = "0.1.0"
description = "Multi System Simulator"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.18.1"
antlr4-python3-runtime = "4.13.2"
autoray = "0.8.4"
click = "8.3.1"
cma = "3.4.0"
colorlog = "6.10.1"
contourpy = "1.3.3"
cotengra = "0.7.5"
cycler = "0.12.1"
cytoolz = "1.1.0"
dill = "0.4.1"
fonttools = "4.61.1"
importlib_metadata = "8.7.1"
iniconfig = "2.3.0"
jax = "0.9.0"
jaxlib = "0.9.0"
joblib = "1.5.3"
kahypar = "1.3.7"
kiwisolver = "1.4.9"
llvmlite = "0.44.0"
Mako = "1.3.10"
MarkupSafe = "3.0.3"
matplotlib = "3.10.8"
ml_dtypes = "0.5.4"
mpmath = "1.3.0"
networkx = "3.6.1"
numba = "0.61.2"
numpy = "2.2.6"
openqasm3 = "1.0.1"
opt_einsum = "3.4.0"
optuna = "4.7.0"
packaging = "26.0"
pillow = "12.1.0"
pluggy = "1.6.0"
psutil = "5.9.8"
py-cpuinfo = "9.0.0"
pygal = "3.1.0"
pygaljs = "1.0.2"
pyparsing = "3.3.2"
pytest = "7.4.4"
pytest-benchmark = "4.0.0"
python-dateutil = "2.9.0.post0"
PyYAML = "6.0.3"
qibo = "0.2.23"
qibojit = "0.1.12"
qibotn = "0.0.3"
qiskit = "2.4.1"
quimb = "1.12.1"
rustworkx = "0.17.1"
scipy = "1.17.0"
six = "1.17.0"
SQLAlchemy = "2.0.46"
stevedore = "5.7.0"
stim = "1.15.0"
sympy = "1.14.0"
tabulate = "0.9.0"
toolz = "1.1.0"
tqdm = "4.67.1"
typing_extensions = "4.15.0"
zipp = "3.23.0"

# Editable local installs
mpstab = { path = "/Users/mattiaro/repo/mpstab", editable = true }
mssim = { path = "/Users/mattiaro/repo/mssim", editable = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"